# Painter

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  painter_pch.h  stroke.h
CMake/: FindArgparse.cmake  FindJson.cmake  FindLunaSVG.cmake  FindPowerfulGA.cmake  cotire.cmake
CMake/Deprecated/: FindPowerfulGA.cmake  FindPythonic.cmake
GA_operations/: adjustable_genome_mutation.h  all.h  final_constrainer.h  final_crossover.h  final_fitness_function.h  genome_generator.h  mutation.h  population_generator.h  stroke_range_generator.h  util.h
GA_operations/callbacks/: GA_informer.h  image_logging_callback.cpp  image_logging_callback.h  on_improvement_updating_logger.cpp  on_improvement_updating_logger.h
coloring/: color_zone_splitting.cpp  color_zone_splitting.h
common_operations/: basic_constraining.cpp  basic_constraining.h  constraining.cpp  constraining.h  figure_area_and_perimeter.cpp  filesystem_primitives.h  find_major_image_color.cpp  find_major_image_color.h  image_adaptive_params.cpp  image_adaptive_params.h  image_color_deduction.cpp  image_color_deduction.h  image_segregation.cpp  image_splitting.cpp  image_splitting.h  image_splitting_scheduling.cpp  image_splitting_scheduling.h  stroke_generation.cpp  stroke_generation.h  stroke_limits.h  stroke_sorting.cpp  stroke_sorting.h
data/: algorithm_statistics.cpp  algorithm_statistics.h  canvas.cpp  canvas.h  color.cpp  color.h  common_stroking_params.cpp  common_stroking_params.h  paint_plan.cpp  paint_plan.h  performance_statistics.cpp  performance_statistics.h  range_rectangle.cpp  range_rectangle.h  stroke.cpp  stroke.h  stroke_limits.cpp  stroke_limits.h  units.h  vector_region.cpp  vector_region.h
data_representation/: canvas.cpp  canvas.h  color.cpp  color.h  computational_efficiency_representation.cpp  computational_efficiency_representation.h  paint_plan.cpp  paint_plan.h  range_rectangle.h  stroke.cpp  stroke.h
dependencies/: README.md
example_paintings/latest/: plan.json
io_api/: image_io_utils.cpp  image_io_utils.h
launch/: launch.cpp  launch.h  multizone.cpp  multizone_launcher.cpp  multizone_launcher.h  saving_results.cpp  saving_results.h  vector_zone_launcher.cpp  vector_zone_launcher.h
launch/workers/: annealing.cpp  annealing.h  ga.cpp  ga.h  simple.h
launching/: GA_parameter_sets.h  GA_worker.cpp  GA_worker.h  SvgZoneLauncher.h  launch_main.cpp  launch_main.h  launch_main_ga.cpp  launch_main_ga.h  launch_stroking.cpp  launch_stroking.h  multizoner.cpp  multizoner.h
launching/single_zone_workers/: GA_worker.cpp  GA_worker.h  annealing_worker.cpp  annealing_worker.h  single_zone_worker.h
old/: CMakeLists.txt
old/GA_operations/: all.h  data_representation.md  final_crossover.cpp  genome_generator.h  mutation.cpp  mutation.h  util.h
old/common_operations/: basic_constraining.cpp  basic_constraining.h  figure_area_and_perimeter.h  image_adaptive_params.cpp  image_color_deduction.cpp  image_color_deduction.h  image_segregation.cpp  image_segregation.h  image_splitting_scheduling.cpp  image_splitting_scheduling.h  stroke_distribution_function_testing.ggb  stroke_generation.cpp  stroke_limits.h  stroke_sorting.h
old/data_representation/: computational_efficiency_representation.h  paint_plan.h  units.h
old/io_api/: image_io_utils.cpp
old/launching/: GA_parameter_sets.h  SvgZoneLauncher.h  launch_stroking.h
old/optimization/: contrast_color_finding.cpp
old/rasterization/: stroke_rasterizer.cpp
old/tests/: _test_common_utils.h  draw_test.h  param_adapting_test.h  stroke_color_optimization_test.h  test_stroke_sorting.h
old/vector_graphics/: SVG_service.h
operations/: error.cpp  error.h
operations/color/: color_deduction.cpp  color_deduction.h  deduction.cpp  deduction.h  optimization.cpp  optimization.h
operations/image/: adaptive_params.cpp  adaptive_params.h  figure.cpp  figure.h  segregation.cpp  segregation.h  splitting.cpp  splitting.h
operations/stroke/: generation.cpp  generation.h  limits.cpp  limits.h  sorting.cpp  sorting.h
optimization/: contrast_color_finding.cpp  contrast_color_finding.h  error_computing.cpp  error_computing.h  image_stroke_optimization.cpp  image_stroke_optimization.h  stroke_color_optimizing.cpp  stroke_color_optimizing.h
optimization/GA_operations/: data_representation.txt  final_constrainer.h  final_error_function.h  final_fitness_function.h  mutation.h  stroke_range_generator.h  util.h
optimization/error/: error_computing.cpp  error_computing.h
optimization_adapters/: fitness.cpp  fitness.h  utils.cpp  utils.h
optimization_adapters/GA/: all.h  constrainer.cpp  constrainer.h  crossover.cpp  crossover.h  generator.cpp  generator.h  mutator.h  (+7 more)
rasterization/: PixelLayerTracker.cpp  PixelLayerTracker.h  RasterizedPainting.cpp  RasterizedPainting.h  drawer.cpp  drawer.h  paint_plan_rasterization.cpp  paint_plan_rasterization.h  pixel_layer_tracker.cpp  pixel_layer_tracker.h  rasterized_paining.h  rasterized_painting.cpp  stroke.cpp  stroke.h  stroke_rasterization.cpp  stroke_rasterization.h  stroke_rasterization.inl.h  stroke_rasterizer.cpp  stroke_rasterizer.h  strokes.cpp
tests/: .gitignore  CMakeLists.txt  _test_common_utils.h  area_counting_test.h  base_test.h  color.cpp  color_test.cpp  color_test.h  convert.cpp  cv_io_test.h  draw_test.h  example_stroke_image_generation.h  generation.cpp  image_splitting_test.h  json.cpp  main.cpp  opencv_test.h  param_adapting_test.h  pixel_tracking.cpp  rasterization_tests.cpp  sorting.cpp  stroke_color_optimization_test.h  stroke_constrainiing_test.h  stroke_constraining_test.h  stroke_counting_test.h  stroke_rasterization_test.h  strokes_to_json_tests.h  svg_service_test.h  test_logging.h  test_stroke_color_optimization.h  test_stroke_sorting.h
utils/: Logger.h  Progress.h  color.cpp  color.h  format.h  formatted_output.h  glue_video.h  image.cpp  image.h  image_io_utils.cpp  image_io_utils.h  logger.h  progress.h  stroke.cpp  stroke.h  stroke_limits.h
vector_graphics/: SVG_service.cpp  SVG_service.h  svg_service.cpp  svg_service.h  utils.cpp  utils.h
(+65 files in other folders)
